src/kubernetes/components/ingress/ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siak
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "200M"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1500"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3000"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
spec:
  ingressClassName: nginx
  rules:
    - host: mahasiswa.uny.com.id
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mahasiswa-service
                port:
                  number: 8080
    - host: jadwal.uny.com.id
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mahasiswa-service
                port:
                  number: 8080
